--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ target_sources(leveldb
     "db/L0_reminder.h"
     "db/L0_reminder.cc"
     "db/memory_structure.h"
+    "db/saver.h"
     "port/port_stdcxx.h"
     "port/port.h"
     "port/thread_annotations.h"
