--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,6 +191,7 @@ target_sources(leveldb
     "util/random.h"
     "util/status.cc"
     "util/zipf.h"
+    "util/aligned_buffer.h"
 
   # Only CMake 3.3+ supports PUBLIC sources in targets exported by "install".
   $<$<VERSION_GREATER:CMAKE_VERSION,3.2>:PUBLIC>
